# pingpong-study

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.scripts  Dockerfile.srv  LICENSE  README.md  config.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  openfga-config.dev.yml  pyproject.toml  start-dev-docker.sh  traefik-crt.yml
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  commit.yml  create-release.yml  fe-study.yml  python.yml  release.yml
.greptile/: config.json
assets/: owl.ai
pingpong/: auth.py  bg.py  config.py  errors.py  log_filters.py  metrics.py  now.py  otel.py  permission.py  schemas.py  server.py  session.py  template.py  time.py
pingpong/email/: __init__.py  azure.py  base.py  gmail.py  mock.py  smtp.py
pingpong/scripts/: __main__.py
pingpong/scripts/airtable/: .env.example  __main__.py  helpers.py  schemas.py  server_requests.py  vars.py
pingpong/study/: airtable.py  schemas.py  server.py
web/: Dockerfile  default.conf.template
web/study/: .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.landing.json  vite.config.ts
web/study/patches/: eslint@10.0.0.patch
web/study/src/: app.css  app.html
web/study/src/landing-routes/: +page.svelte
web/study/src/landing-routes/about/: +page.ts
web/study/src/lib/: tanstack-table.d.ts
web/study/src/lib/api/client/: course.ts  index.ts  preassessment.ts  user.ts
web/study/src/lib/api/types/: course.ts  index.ts  preassessment.ts  user.ts
web/study/src/lib/api/utils/: error.ts  fetch.ts  index.ts  request.ts  response.ts  types.ts
web/study/src/lib/components/: app-sidebar.svelte  course-timeline.svelte  login-as-form.svelte  login-form.svelte  nav-main.svelte  nav-user.svelte  spinner.svelte  study-landing.svelte  url-copy-field.svelte
web/study/src/lib/components/classes-table/: columns.ts  data-table-button.svelte  data-table-url-copyable.svelte  deadline-status.svelte  randomization-badge.svelte  status-badge.svelte
web/study/src/lib/components/common-table/: data-table.svelte
web/study/src/lib/components/completion-progress/: progress.svelte
web/study/src/lib/components/dashboard/: announcements.svelte  deadlines-progress.svelte  faq.svelte  post-progress.svelte
web/study/src/lib/components/preassessment-table/: columns.ts
web/study/src/lib/components/ui/sidebar/: sidebar-trigger.svelte
web/study/src/lib/components/ui/textarea/: textarea.svelte
web/study/src/lib/stores/: courses.ts
web/study/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/study/src/routes/about/: +page.svelte
web/study/src/routes/courses/[courseId]/: +page.svelte  +page.ts
web/study/src/routes/login/: +page.svelte
web/study/src/routes/login-as/: +page.svelte
web/study/src/routes/profile/: +page.svelte
web/study/src/routes/resources/: +page.svelte  +page.ts
