[project]
name = "pingpong-study"
version = "6.8.1"
description = "An app to support the PingPong College RCT study."
readme = "README.md"
requires-python = ">= 3.11, <4.0.0"
authors = [
    { name = "Evangelos Kassos", email = "github@evangeloskassos.com" }
]
license = "MIT"
dependencies = [
    "aiohttp ~=3.13.4",
    "aiosmtplib ~= 5.1.0",
    "arrow ~= 1.4.0",
    "azure-communication-email ~= 1.1.0",
    "click ~= 8.3.1",
    "dotenv ~= 0.9.9",
    "fastapi[standard]~=0.135.3",
    "opentelemetry-api ~= 1.39.1",
    "opentelemetry-sdk ~= 1.39.1",
    "pyairtable ~= 3.3.0",
    "pydantic ~= 2.12.5",
    "pydantic-settings ~= 2.13.1",
    "pyjwt ~= 2.12.0",
    "requests ~= 2.33.1",
    "sentry-sdk~=2.57.0",
    "uvicorn~=0.43.0",
]

[dependency-groups]
dev = [
    "deptry~=0.25.1",
    "pre-commit ~= 4.5.0",
]

local-scripts-qualtrics = [
    "selenium~=4.41.0",
]

[tool.deptry]
known_first_party = ["pingpong"]

[tool.uv]
override-dependencies = ["pygments ~= 2.20.0"]
