[project]
name = "pingpong-study"
version = "6.12.0"
description = "An app to support the PingPong College RCT study."
readme = "README.md"
requires-python = ">= 3.11, <4.0.0"
authors = [
    { name = "Evangelos Kassos", email = "github@evangeloskassos.com" }
]
license = "MIT"
dependencies = [
    "aiohttp~=3.14.1",
    "aiosmtplib~=5.1.2",
    "arrow ~= 1.4.0",
    "azure-communication-email ~= 1.1.0",
    "click~=8.4.2",
    "dotenv ~= 0.9.9",
    "fastapi[standard]~=0.138.0",
    "opentelemetry-sdk ~= 1.39.1",
    "pyairtable~=3.4.0",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.2",
    "pyjwt~=2.13.0",
    "requests~=2.34.2",
    "sentry-sdk~=2.64.0",
    "uvicorn~=0.51.0",
]

[dependency-groups]
dev = [
    "deptry~=0.25.1",
    "pre-commit~=4.6.0",
]

local-scripts-qualtrics = [
    "selenium~=4.45.0",
]

[tool.deptry]
known_first_party = ["pingpong"]

[tool.uv]
override-dependencies = ["pygments ~= 2.20.0"]
